kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: radarbot
  name: lyov-service
spec:
  selector:
    app: lyov
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
